# libmodbus

./: .buildinfo  .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  crates.js  examples.html  genindex.html  help.html  index.html  objects.inv  overview.html  search.html  searchindex.js  settings.html  src-files.js  testing.html
.githooks/: pre-commit
.github/workflows/: cmake-single-platform.yml  doxygen.yml  publish-docs.yml  sphinx.yml
_sources/: examples.rst.txt  index.rst.txt  overview.rst.txt
_sources/api/: enumerations.rst.txt  index.rst.txt
api/: core_classes.html  enumerations.html  functions.html  index.html
benches/: frame.rs  modbus_bench.rs  rtu.rs  tcp.rs
docs/: Checksum_8cpp.html  Checksum_8hpp.html  Checksum_8hpp.js  Checksum_8hpp_source.html  Doxyfile.xml  Makefile  ModbusBaseServer_8hpp.html  ModbusBaseServer_8hpp.js  ModbusBaseServer_8hpp_source.html  ModbusCommand_8cpp.html  ModbusCommand_8hpp.html  ModbusCommand_8hpp.js  ModbusCommand_8hpp_source.html  ModbusDataModel_8cpp.html  ModbusDataModel_8hpp.html  ModbusDataModel_8hpp.js  ModbusDataModel_8hpp_source.html  ModbusFrame_8cpp.html  ModbusFrame_8hpp.html  ModbusFrame_8hpp.js  ModbusFrame_8hpp_source.html  ModbusRtuServer_8cpp.html  Modbus_8hpp.html  Modbus_8hpp.js  Modbus_8hpp_source.html  annotated.html  annotated_dup.js  classChecksum-members.html  classChecksum.html  classChecksum.js  classDiagnosticsCommand-members.html  classDiagnosticsCommand.html  classDiagnosticsCommand.js  classMbapHeader-members.html  classMbapHeader.html  classMbapHeader.js  classModbusAsciiFrame-members.html  classModbusAsciiFrame.html  classModbusAsciiFrame.js  classModbusBaseServer-members.html  (+80 more)
docs/api/: core_classes.rst  functions.rst
docs/latex/: refman.tex
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  files_0.js  files_1.js  files_2.js  functions_0.js  (+34 more)
include/: Checksum.hpp  CommInterface.hpp  Modbus.hpp  ModbusBaseServer.hpp  ModbusCommand.hpp  ModbusDataModel.hpp  ModbusFrame.hpp  StaticVector.hpp  libmodbus.hpp
libmodbuzz/: all.html  index.html  sidebar-items.js
libmodbuzz/checksum/: fn.crc16.html  fn.lrc.html  index.html  sidebar-items.js
libmodbuzz/command/: fn.execute.html  index.html  sidebar-items.js
libmodbuzz/command/diagnostics/: fn.diagnostics.html  index.html  sidebar-items.js
libmodbuzz/command/read/: fn.read_coils.html  fn.read_discrete_inputs.html  fn.read_holding_registers.html  fn.read_input_registers.html  index.html  sidebar-items.js
libmodbuzz/command/write/: fn.write_single_coil.html  fn.write_single_register.html  index.html  sidebar-items.js
libmodbuzz/data_model/: constant.DEFAULT_MAX_COILS.html  constant.DEFAULT_MAX_DISCRETE_INPUTS.html  constant.DEFAULT_MAX_HOLDING_REGISTERS.html  constant.DEFAULT_MAX_INPUT_REGISTERS.html  index.html  sidebar-items.js  struct.DataModel.html  struct.DataModelConfig.html
libmodbuzz/error/: enum.ModbusError.html  index.html  sidebar-items.js  type.Result.html
libmodbuzz/frame/: enum.FrameType.html  index.html  sidebar-items.js  struct.Pdu.html
libmodbuzz/protocol/: enum.DiagnosticsCode.html  enum.ExceptionCode.html  enum.FunctionCode.html  index.html  sidebar-items.js
libmodbuzz/server/: index.html  sidebar-items.js  trait.ModbusServer.html
scripts/: document.bat
search.index/: 0059892d54fa.js  016a9398ac93.js  02fc580e6caf.js  032669965a96.js  056317da9ebe.js  1396bfb090da.js  14a780ea8b3b.js  17d59d841024.js  1d7462ee6500.js  23441f319e28.js  2361fcde7740.js  28e2b707b11f.js  29d6934fe662.js  3267edc02a6f.js  34ee7496d70c.js  36d3b11635a8.js  39417616f70e.js  39b043a9585d.js  3a2707c13129.js  3fd28e47e314.js  412afee8ffba.js  419ca41345d5.js  4a83e2abf62b.js  4ac654cee36a.js  522bc0dcb53a.js  523796eb53d7.js  52411b970fb9.js  5244afbea55a.js  577d3b293a0f.js  58a3baab747d.js  63506ee1da05.js  6893964fe884.js  6a949515500f.js  6b4a59c40798.js  6db8f97b48bd.js  6dc597c43d5d.js  74d80c39e96f.js  773bff99a761.js  7aebd5715fe2.js  root.js
search.index/crateNames/: db4645d30590.js
search.index/desc/: 3df2a0cafa70.js
search.index/entry/: 05cbef5546b4.js
search.index/function/: 1c3e56908e30.js
search.index/generic_inverted_index/: 1e29cf3d86d7.js
search.index/name/: 5c474b43d2ca.js
search.index/normalizedName/: 7562628123ad.js
search.index/path/: 76e60059b325.js
search.index/type/: 66121e6c4fc4.js
src/: Checksum.cpp  CommInterface.h  CommInterface.hpp  Modbus.cpp  Modbus.h  Modbus.hpp  ModbusCommand.cpp  ModbusCommand.hpp  ModbusDataModel.cpp  ModbusDataModel.h  ModbusDataModel.hpp  ModbusFrame.cpp  ModbusFrame.hpp  ModbusRtuServer.cpp  ModbusServer.cpp  StaticVector.cpp  checksum.rs  config.h  data_model.rs  error.rs  lib.rs  protocol.rs
src/command/: diagnostics.rs  mod.rs  read.rs  write.rs  write_multiple.rs
src/frame/: mod.rs  rtu.rs  tcp.rs
src/libmodbuzz/: checksum.rs.html  data_model.rs.html  error.rs.html  lib.rs.html  protocol.rs.html
src/server/: mod.rs  rtu.rs  tcp.rs
tests/: ModbusDataModelTest.cpp  ModbusTest.cpp  frame.rs  rtu_server.rs  tcp_socket.rs
tests/unit/: CMakeLists.txt  ModbusRtuServerTest.cpp
(+49 files in other folders)
