[package]
name = "libmodbuzz"
version = "0.1.1"
edition = "2024"
autobenches = false
description = "A safe, idiomatic Rust implementation of the Modbus protocol (RTU/TCP)"
authors = ["Shishir Dey <shishirdey241097@gmail.com>"]
license = "MIT"
repository = "https://github.com/shishir-dey/libmodbuzz"
homepage = "https://shishir-dey.github.io/libmodbuzz/"
documentation = "https://shishir-dey.github.io/libmodbuzz/"
readme = "README.md"
keywords = ["modbus", "rtu", "tcp", "protocol", "industrial"]
categories = ["embedded", "network-programming"]

[dependencies]

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "modbus_bench"
path = "benches/modbus_bench.rs"
harness = false
